--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -81,7 +81,7 @@
               <movie-score
                 class="cursor-pointer"
                 (click)="openTmdb(status.movie.id)"
-                [value]="movie?.tmdbRating || 8"
+                [value]="movie?.tmdbRating"
                 size="s"
               ></movie-score>
             </div>
