--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -1,6 +1,3 @@
-$posterWidth: min(27vw, 154px);
-$posterHeight: calc(3 / 2 * $posterWidth);
-
 .loading {
   width: 100%;
 
@@ -22,7 +19,6 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding-left: calc(#{$posterWidth} - 20px);
   }
 
   .controls {
@@ -34,7 +30,7 @@ $posterHeight: calc(3 / 2 * $posterWidth);
 
   .option-card {
     background-color: #fbf9ff;
-    min-height: calc(1 * $posterHeight);
+    // min-height: calc(1 * $posterHeight);
     width: 100%;
     display: flex;
     align-items: center;
@@ -56,43 +52,11 @@ $posterHeight: calc(3 / 2 * $posterWidth);
   }
 
   .poster-container {
-    position: absolute;
-    top: -19px;
-    left: -22px;
-    z-index: 2;
-    border-radius: 6px;
-    width: $posterWidth;
-    min-height: $posterHeight;
-    background-size: cover;
-  }
-
-  .poster-border {
-    $border-width: 0px;
-    width: calc(100% + 2 * $border-width);
-    height: calc(100% + 2 * $border-width);
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: -1 * $border-width;
-    top: -1 * $border-width;
-    filter: blur(6px);
-  }
-
-  .poster {
-    width: $posterWidth;
-    margin-bottom: 19px;
-    border-radius: 6px;
     position: relative;
-
-    &.loading-image {
-      height: calc(#{$posterHeight} + 5px);
-      margin-top: -24px;
-      margin-bottom: 24px;
-    }
-
-    &.ng-lazyloaded {
-      opacity: 1;
-    }
+    top: -24px;
+    left: -34px;
+    margin-right: -12px;
+    // z-index: 2;
   }
 
   .title {
@@ -381,18 +345,20 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     position: absolute;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    bottom: 24px;
-    width: $posterWidth;
+    width: 100%;
     font-size: 17px;
     padding: 0 0 4px;
     box-shadow: 1px 1px 11px 0px #0000000f;
-    background-image: linear-gradient(0deg, #000000af 75%, transparent);
+    background-image: linear-gradient(0deg, #00000055 75%, transparent);
     background-position-y: 65px;
-    background-size: calc($posterWidth + 20px) 66px;
+    background-size: cover;
     transition: height 0.4s ease-out, opacity 0.4s ease-in-out;
     height: 39px;
     overflow: hidden;
     opacity: 1;
+    bottom: 5px;
+    z-index: 2;
+    background-position-y: 0;
 
     .reaction {
       position: relative;
@@ -432,7 +398,6 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     }
 
     &:not(.open) {
-      background-position-y: 0;
       height: 28px;
       padding: 0;
       opacity: 0.5;
@@ -603,11 +568,6 @@ $posterHeight: calc(3 / 2 * $posterWidth);
   }
 }
 
-.backdrop {
-  height: 190px;
-  background-size: contain;
-}
-
 // Movie rating chart
 $donut-center-color: #09083a;
 $donut-font-weight: 700;
@@ -623,9 +583,3 @@ $donut-font-weight: 700;
   font-family: "Product Sans Bold";
 }
 
-watch-list-marker {
-  position: absolute;
-  left: 4%;
-  top: -3px;
-  z-index: 4;
-}
