Improve search result design

--- a/src/app/poster/poster.component.html
+++ b/src/app/poster/poster.component.html
@@ -1,7 +1,7 @@
 <ng-template #loader>
   <div class="poster-container" [ngClass]="size + '-size'">
     <div class="loading-poster loading-image poster-mockup">
-      <div class="loading-movie-score size-s"></div>
+      <div class="loading-movie-score" [ngClass]="size + '-size'"></div>
     </div>
   </div>
 </ng-template>
