--- a/src/app/watch-list/watch-list.component.html
+++ b/src/app/watch-list/watch-list.component.html
@@ -74,7 +74,7 @@
 <ng-template #watchlistItem>
   <div class="flex movie-content loading-background">
     <div class="loading-btn loading-order"></div>
-    <div class="loading-image poster-mockup"></div>
+    <poster [size]="'xs'"></poster>
     <div class="flex-column movie-details">
       <div class="loading-sub-text loading-title"></div>
       <div class="loading-main-text"></div>
