--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -75,15 +75,7 @@
           *ngFor="let movie of searchResults$ | async"
           (click)="addMoviePollItem(movie)"
         >
-          <span class="title"
-            >{{ movie.title }}
-            <ng-container *ngIf="movie.title !== movie.original_title"
-              ><span class="original_title"
-                >({{ movie.original_title }})</span
-              ></ng-container
-            ></span
-          >
-          ({{ movie.release_date | date : "yyyy" }})
+          <movie-search-result [movie]="movie"></movie-search-result>
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
