--- a/src/app/share-dialog/share-dialog.component.scss
+++ b/src/app/share-dialog/share-dialog.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  font-family: 'Product Sans';
 
   .mat-mdc-dialog-actions {
     justify-content: center;
